# remudero

./: .dependency-cruiser.cjs  .gitignore  .jscpd.json  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  DECISIONS.md  DIAGNOSIS.md  FINDINGS.md  LEARNINGS.md  LICENSE  MASTER-PLAN.md  README.md  SECURITY.md  commitlint.config.mjs  node_modules  package-lock.json  package.json  pr.diff  stryker.conf.json  stryker.conf.mjs  tsconfig.json
.github/: dependabot.yml
.remudero/: mounts.yaml  quality-baseline.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
apps/shell-macos/src-tauri/: Cargo.toml  tauri.conf.json
apps/shell-macos/src-tauri/capabilities/: default.json
apps/shell-macos/src-tauri/src/: lib.rs  main.rs
docs/: ORIENTATION.md  alert-lane.md  architecture.md  armed-gate-probe.md  ci-gate.md  cli-reference.md  control-surface.md  dep-review.md  deploy-supervisor.md  named-criterion-probe.md  no-acceptance-probe.md  operator-guide.md  plan-sync.md  refactor-campaign.md  review-gate.md  task-lifecycle.md  throwaway-probe.md  troubleshooting.md
hooks/: deny-floor.sh
learnings/: architecture.yaml  ci.yaml  failures.yaml  index.json  platform.yaml  testing.yaml
openapi/: daemon.yaml
plan/: alert-policy.yaml  claims.yaml  learnings.yaml  mast-mapping.yaml  plan-index.json  tasks.yaml
scripts/: build-desktop-web.mjs  claims-check.mjs  complexity-baseline.json  coverage-baseline.json  coverage-ratchet.mjs  cve-baseline.json  diff-coverage.mjs  dup-baseline.json  fitness-baseline.json  generate-api-client.mjs  generate-cli-reference.mjs  generate-learnings-index.mjs  generate-plan-index.mjs  learnings-assert-check.mjs  learnings-budget-baseline.json  learnings-budget-ratchet.mjs  mutation-baseline.json  mutation-ratchet.mjs  mutation-relevant-paths.json  no-hand-rolled-fetch-check.mjs  refactor-campaign.mjs  shell-screenshot.mjs  strict-probe.ts
settings/: worker.json
src/: run-task.ts  spike.ts
test/: alert-lane.test.ts  api-client-client.test.ts  api-client-drift-check.test.ts  architecture-fitness.test.ts  awareness-surface-ratchet.test.ts  block-reason.test.ts  board.test.ts  breaker-survives-rotation.test.ts  changelog-generation.test.ts  claims-check.test.ts  classify.test.ts  cli-reference.test.ts  commit-message.test.ts  commitlint-config.test.ts  compaction.test.ts  config.test.ts  consumer-breaking-change.test.ts  containment-wiring.test.ts  containment.test.ts  correct.test.ts  drain.test.ts  (+128 more)
(+400 files in other folders)
