[package]
name = "remudero-desktop"
version = "0.1.0"
description = "Remudero -- Tauri macOS shell (shell 1, MASTER-PLAN §7 W3-T3): wraps the unmodified shell-0 web build with menu-bar presence, launch-at-login, native notifications, a global hotkey, and deep links."
license = "Apache-2.0"
edition = "2021"
rust-version = "1.77"

# See build.rs.
[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "remudero-desktop"
path = "src/main.rs"

# macOS-only shell (MASTER-PLAN §7 shell 1); shell 2 (iOS, W3-T4) is a separate app under
# apps/mobile, not a build target of this crate. The app identifier/icons/bundle targets live in
# tauri.conf.json (Tauri's own manifest), not here -- Cargo.toml has no bundle metadata of its own.
